#=======================================================================================================================
set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
#=======================================================================================================================
cmake_minimum_required(VERSION 3.28)
#=======================================================================================================================
project(glfw_draw_instanced)
#=======================================================================================================================
# Find GLEW
find_package(GLEW REQUIRED)
# Find GLFW
find_package(glfw3 REQUIRED)
# Find GLUT
find_package(GLUT REQUIRED)

# Include GLM directly since it is a header-only library
include_directories(${GLM_INCLUDE_DIRS})
#=======================================================================================================================
add_executable(${PROJECT_NAME})
#=======================================================================================================================
add_subdirectory(code)
#=======================================================================================================================